fix: Daily cals alignment

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -289,8 +289,9 @@ $search-height: 50%;
 }
 
 .food__calories {
-  min-width: 3.5em;
+  min-width: 4em;
   margin-left: auto;
+  text-align: right;
 }
 
 /*Spinner from http://projects.lukehaas.me/css-loaders/ */
